--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Briney Portfolio</title>
+    <title>Nusrat Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="porfolio.css">
 </head>
-<body>
-    
+<body class="font-open-sans">
+    <header>
+        <nav>
+            <div class="logo">
+                <h2>Ma<span class="color-oranged">r</span>y</h2>
+            </div>
+            <ul class="menu">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn">Hire Me</button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
