--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Nusrat Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="porfolio.css">
 </head>
@@ -27,8 +30,8 @@
             <h1>Mary Hardy</h1>
             <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
             <div>
-            <button class="btn">Download CV</button>
-            <button class="btn">Contact</button>
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
         </div>
         <div class="banner-img">
@@ -62,5 +65,111 @@
             </div>
         </div>
     </section>
+    <section id="skills">
+        <div class="skills-container">
+            <div class="section-heading">
+                <h2>What I do</h2>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-card">
+                    <img src="images/icons/js.png">
+                    <h3>Vanilla JavaScript</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/react.png">
+                    <h3>React</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/nodejs.png">
+                    <h3>Node.js</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/mongo.png">
+                    <h3>MongoDB</h3>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="resume">
+        <div class="section-heading">
+            <h2>A Summary of My Resume</h2>
+        </div>
+        <div class="resume-container">
+            <div class="education">
+                <h2 class="section-tittle">My Education</h2>
+                <div class="resume-card">
+                    <h3 class="card-tittle">Master in Computer Engineering</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-tittle">Master in Computer Engineering</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-tittle">Master in Computer Engineering</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="exprience"> 
+                <h2 class="section-tittle">My Experience</h2>
+                <div class="resume-card">
+                    <h3 class="card-tittle">Sr. Font End Developer</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-tittle">Jr. Font End Developer</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-tittle">HTML Developer</h3>
+                    <p class="card-info">Harvard University / 2015 - 2017</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <div class="text-center"><button class="btn"><i class="fa-solid fa-download"></i> Download CV</button></div>
+    </section>
+    <footer>
+        <section class="footer-container">
+            <div class="social">
+                <h2>Let's Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="icons">
+                    <a href="#"><img src="images/icons/facebook.png"></a>
+                    <a href="#"><img src="images/icons/twitter.png"></a>
+                    <a href="#"><img src="images/icons/insta.png"></a>
+                </div>
+            </div>
+            <form class="form">
+                <h2>Let’s Message me</h2>
+                <div class="">
+                    <input type="text" placeholder="Your Name">
+                </div>
+                <div class="">
+                    <input type="text" placeholder="Your Email">
+                </div>
+                <div>
+                    <textarea rows="10" name="" id="" placeholder="Message"></textarea>
+                </div>
+                <input type="submit" class="btn">
+            </form>
+        </section>
+    </footer>
 </body>
 </html>
